# write-book-template

./: .codespellignore  .coveragerc  .gitignore  .markdownlint.json  .pre-commit-config.yaml  LICENSE  Makefile  README.md  convert_book.sh  create-project-documentation.md  create_project_structure.sh  full-export-book.py  full-export-documentation.md  how-to-write.md  initialize_repo.sh  makefile  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
config/: export-settings.json  export-settings.yaml  init-settings.yaml  voice-settings.yaml
exporter/: cli.py  fsops.py  images.py  metadata.py  pandoc_cmd.py  paths.py  pipeline.py  toc.py  validators.py
scripts/: bulk_change_extension.py  clean_git_cache.py  convert_book.sh  convert_images.py  convert_img_tags.py  convert_links_to_plain_text.py  convert_to_absolute.py  convert_to_relative.py  create_chapters.py  create_project_structure.sh  emoji_map.py  emoji_map_sanity.py  fix_german_quotes.py  full-export-book.py  full_export_book.py  full_export_comic.py  generate_audiobook.py  generate_images.py  generate_images_deepai.py  init_book_project.py  inject_images.py  make_tag_message.py  metadata_values_example.json  normalize_toc_links.py  pandoc_batch.py  print_version_build.py  reorder_and_rename_chapters.py  replace_emojis.py  replace_md_bullet_points.py  sanitize.py  shortcuts.py  shortcuts_export.py  shortcuts_export_comic.py  shortcuts_init.py  shortcuts_translate.py  shortcuts_translate_lms.py  strip_links.py  symbol_map.py  test_shortcuts_export_passthrough.py  translate_book_deepl.py  (+5 more)
scripts/data/: character_profiles.json  image_prompt_generation_template.json  image_prompts.json
scripts/enums/: book_type.py
scripts/tts/: base.py  edge_tts_adapter.py  elevenlabs_adapter.py  fish_audio.py  gtts_adapter.py  pyttsx3_adapter.py
tests/: conftest.py  test_bulk_change_extension.py  test_clean_git_cache.py  test_clean_markdown_for_tts.py  test_cleaner_use_cases.py  test_cmd_and_paths.py  test_convert_images.py  test_convert_img_tags.py  test_convert_links_to_plain_text.py  test_convert_links_to_plain_text_extra.py  test_convert_round_trip.py  test_convert_to_absolute.py  test_convert_to_absolute_extra.py  test_convert_to_absolute_fuzz.py  test_convert_to_relative.py  test_create_chapters.py  test_fix_german_quotes.py  test_full_export.py  test_full_export_book.py  test_full_export_book_markdown_ext_and_validation_path.py  test_full_export_book_output_file.py  test_full_export_book_pipeline.py  test_full_export_comic_cli.py  test_full_export_comic_combine.py  test_full_export_comic_pdf.py  test_full_export_markdown_ext_and_validation_path.py  test_full_export_pipeline.py  test_generate_audiobook.py  test_generate_audiobook_clean_markdown_for_tts.py  test_generate_audiobook_cleaner_use_cases.py  test_generate_audiobook_use_cases.py  test_generate_images_deepai.py  test_generate_use_cases.py  test_image_conversion.py  test_images_integration.py  test_init_book_project.py  test_inject_images.py  test_load_export_settings.py  test_make_tag_message_test_ask_helpers.py  test_normalize_toc_links.py  (+24 more)
